--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Particle</title>
     <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
         integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -91,6 +92,31 @@
             <a href="#" class="nav-icon flex-box" id="naviBar">
                 <i class="fa fa-navicon nav-button"></i>
             </a>
+            <ul class="nav-menu flex-box">
+                <li>
+                    <a href="">Home <i class="fa fa-angle-down"></i></a>
+                </li>
+                <li>
+                    <a href="#">Our Work <i class="fa fa-angle-down"></i></a>
+                </li>
+                <li>
+                    <a href="#">About Us <i class="fa fa-angle-down "></i></a>
+                </li>
+                <li>
+                    <a href="#">Service <i class="fa fa-angle-down "></i></a>
+                </li>
+                <li>
+                    <a href="#">Our Skill <i class="fa fa-angle-down "></i></a>
+                </li>
+                <li>
+                    <a href="#">Our Blog <i class="fa fa-angle-down "></i></a>
+                </li>
+                <li>
+                    <a href="#">Contact Us <i class="fa fa-angle-down "></i></a>
+                </li>
+            </ul>
+
+
         </nav>
         <div class="container">
             <div class="head-text">
@@ -436,6 +462,7 @@
         </div>
     </footer>
     <script src="js/outer.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
 </body>
 
