--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
         </nav>
         <div class="container">
             <div class="head-text">
-                <h1 class="heading">
+                <h1 class="heading"  data-aos="fade-down" data-aos-duration="1000">
                     Awesome Ineractive Effect
                 </h1>
-                <p class="text">
+                <p class="text"  data-aos="fade-up" data-aos-duration="1000">
                     The Conlest Modern HTML Templates is Herel Welcome to <span class="bold-text">Particle</span> by
                     Skilltech Web Design
                 </p>
@@ -133,8 +133,8 @@
     <!--=============-SECTION=============-->
     <section class="get-theme">
         <div class="container theme-text">
-            <h1 class="heading">Coolest HTML Theme Yet?</h1>
-            <p class="text">Open Particle today, why not!</p>
+            <h1 class="heading" data-aos="fade-down" data-aos-duration="1000">Coolest HTML Theme Yet?</h1>
+            <p class="text" data-aos="fade-up" data-aos-duration="1000">Open Particle today, why not!</p>
             <a href="#" class="button theme-button">Get it Now</a>
         </div>
     </section>
@@ -146,7 +146,7 @@
 
         </div>
         <div class="flex-box space">
-            <div class="card-1">
+            <div class="card-1" data-aos="fade-down"  data-aos-duration="1000">
                 <div class="creativity-image">
                     <i class="fa fa-eye heading"></i>
                     <h2 class="head">Amazing Hover Effect</h2>
@@ -157,7 +157,7 @@
                         <p class="text">Pure CSS Intant Hover</p>
                     </div>
             </div>
-                <div class="card-2">
+                <div class="card-2" data-aos="fade-up"  data-aos-duration="1000">
                     <div class="creativity-image">
                         <i class="fa fa-eye heading"></i>
                         <h2 class="head">Superb Image Style</h2>
@@ -168,7 +168,7 @@
                             <p class="text">Pure CSS Intant Hover</p>
                         </div>
                 </div>
-                <div class="card-3">
+                <div class="card-3" data-aos="fade-down"  data-aos-duration="1000">
                     <div class="creativity-image">
                         <i class="fa fa-eye heading"></i>
                         <h2 class="head">Particle Design Theme</h2>
@@ -179,7 +179,7 @@
                             <p class="text">Pure CSS Intant Hover</p>
                         </div>
                 </div>
-                <div class="card-4">
+                <div class="card-4" data-aos="fade-up"  data-aos-duration="1000">
                     <div class="creativity-image">
                         <i class="fa fa-eye heading"></i>
                         <h2 class="head">Thumb Hover Superb</h2>
@@ -237,9 +237,9 @@
     </div>
     <section class="better-section">
         <div class="container better-text">
-            <h2 class="heading">"Patience, persistence and perspireation make an unbeatable combination for <span
+            <h2 class="heading" data-aos="fade-down" data-aos-duration="1000">"Patience, persistence and perspireation make an unbeatable combination for <span
                     class="bold-text">success.</span>"</h2>
-            <p class="text"><span class="bold-name">NAPOLEON HILL - </span>AUTHOR</p>
+            <p class="text" data-aos="fade-up" data-aos-duration="1000"><span class="bold-name">NAPOLEON HILL - </span>AUTHOR</p>
         </div>
     </section>
     <!--=============SERVICE-SECTION=============-->
@@ -252,7 +252,7 @@
             </p>
         </div>
         <div class="container service-type flex-box space">
-            <div class="service-box-left service-box">
+            <div class="service-box-left service-box" data-aos="fade-left" data-aos-duration="1000">
                 <ul>
                     <li>
                         <a href="#">
@@ -277,10 +277,10 @@
                     </li>
                 </ul>
             </div>
-            <div class="service-box-center service-box">
+            <div class="service-box-center service-box" data-aos="zoom-in" data-aos-duration="1000">
                 <img src="image/iphone-services.png" alt="">
             </div>
-            <div class="service-box-right service-box">
+            <div class="service-box-right service-box" data-aos="fade-left" data-aos-duration="1000">
                 <ul>
                     <li>
                         <a href="#">
@@ -310,8 +310,8 @@
     <!--=============PARTICLE-SECTION=============-->
     <section class="particle-section">
         <div class="container particle-text">
-            <h1 class="heading">Like what You see?<span class="bold-head">Get Particle</span>Now!</h1>
-            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero hic cum similique fuga
+            <h1 class="heading" data-aos="fade-down" data-aos-duration="1000">Like what You see?<span class="bold-head">Get Particle</span>Now!</h1>
+            <p class="text" data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero hic cum similique fuga
                 obcaecati laudantium
                 corporis ratione quibusdam eos. Cum harum laborum perferendis consequatur sint porro laboriosam nam sed
                 reiciendis.
@@ -330,7 +330,7 @@
         <div class="skill flex-box space">
             <h2>adobe creative cloud <span>75%</span></h2>
             <div class="progress">
-                <div class="adobe">
+                <div class="adobe" id="adobePro">
                 </div>
             </div>
             <p>75%</p>
@@ -338,7 +338,7 @@
         <div class="skill flex-box space">
             <h2>wordpress <span>80%</span></h2>
                 <div class="progress">
-                    <div class="wordpress" >
+                    <div class="wordpress" id="">
                         
                     </div>
                 </div>
@@ -381,7 +381,7 @@
                 </p>
             </div>
             <div class="connect-source flex-box space">
-                <div class="info-left">
+                <div class="info-left" data-aos="zoom-in" data-aos-duration="1000">
                     <h2 class="head">Our office <span class="bold-head">info</span></h2>
                     <ul>
                         <li>
@@ -432,7 +432,7 @@
                     </div>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                 </div>
-                <div class="message-right">
+                <div class="message-right" data-aos="zoom-in" data-aos-duration="1000">
                     <h2 class="head">Send us a <span class="bold-head">Message</span></h2>
                     <form action="">
                         <div class="name">
