--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="skill flex-box space">
             <h2>wordpress <span>80%</span></h2>
                 <div class="progress">
-                    <div class="wordpress" id="">
+                    <div class="wordpress" id="wordPro">
                         
                     </div>
                 </div>
@@ -348,7 +348,7 @@
         <div class="skill flex-box space">
             <h2>drupal <span>50%</span></h2>
             <div class="progress">
-                <div class="drupal">
+                <div class="drupal" id="drupalPro">
                 </div>
             </div>
             <p>50%</p>
@@ -356,7 +356,7 @@
         <div class="skill flex-box space">
             <h2>graphic Design <span>70%</span></h2>
             <div class="progress">
-                <div class="gra-design">
+                <div class="gra-design" id="designPro">
 
                 </div>
             </div>
@@ -365,7 +365,7 @@
         <div class="skill flex-box space">
             <h2>html/css/<wbr>javscriptspan <span>59%</span></h2>
             <div class="progress">
-                <div class="html-css">
+                <div class="html-css" id="stylePro">
                 </div>
             </div>
             <p>59%</p>
