--- a/index.html
+++ b/index.html
@@ -252,23 +252,23 @@
             </p>
         </div>
         <div class="container service-type flex-box space">
-            <div class="service-box-left service-box" data-aos="fade-left" data-aos-duration="1000">
+            <div class="service-box-left service-box" >
                 <ul>
-                    <li>
+                    <li   data-aos="fade-down" data-aos-duration="1000">
                         <a href="#">
                             Graphic Design
                             <i class="fa fa-pencil"></i>
                         </a>
                         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quos.</p>
                     </li>
-                    <li>
+                    <li   data-aos="zoom-in" data-aos-duration="1000">
                         <a href="#">
                             Web Desing
                             <i class="fa fa-laptop"></i>
                         </a>
                         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quos.</p>
                     </li>
-                    <li>
+                    <li   data-aos="fade-up" data-aos-duration="1000">
                         <a href="#">
                             Social Media
                             <i class="fa fa-laptop"></i>
@@ -280,23 +280,23 @@
             <div class="service-box-center service-box" data-aos="zoom-in" data-aos-duration="1000">
                 <img src="image/iphone-services.png" alt="">
             </div>
-            <div class="service-box-right service-box" data-aos="fade-left" data-aos-duration="1000">
+            <div class="service-box-right service-box">
                 <ul>
-                    <li>
+                    <li  data-aos="fade-down" data-aos-duration="1000">
                         <a href="#">
                             <i class="fa fa-camera"></i>
                             Photography
                         </a>
                         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quos.</p>
                     </li>
-                    <li>
+                    <li  data-aos="zoom-in" data-aos-duration="1000">
                         <a href="#">
                             <i class="fa fa-microphone"></i>
                             Marketing
                         </a>
                         <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, quos.</p>
                     </li>
-                    <li>
+                    <li  data-aos="fade-up" data-aos-duration="1000">
                         <a href="#">
                             <i class="fa fa-play-circle"></i>
                             video Production
