--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <a href="#" class="logo-image">
                 <img src="image/logo-normal.png" alt="This is logo">
             </a>
-            <div class="hidden-nav" id="navOpen">
-                <nav class="navigation" >
+            <div class="hidden-nav">
+                <nav class="navigation" id="navOpen">
                     <div class="nav-header flex-box space">
                         <a href="#" class="nav-logo">
                             <img src="image/logo-normal2.png" alt="This is logo">
